--- a/package.json
+++ b/package.json
@@ -6,5 +6,15 @@
     "lerna": "^3.22.1",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2"
+  },
+  "lint-staged": {
+    "*.{json,html,js}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
