--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
   "author": "XinPing Wang <xinping.wang@hotmail.com>",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/core.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -14,6 +14,13 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "capture": "node ./lib/index.js"
+  },
+  "dependencies": {
+    "playwright": "^1.5.1"
+  },
+  "engines": {
+    "node": "~12.0.0"
   }
 }
