--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,12 +15,17 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
-    "capture": "node ./lib/index.js"
+    "build": "tsc",
+    "capture": "node ./build/lib/index.js"
   },
   "dependencies": {
-    "playwright": "^1.7.1"
+    "playwright": "^1.7.1",
+    "typescript": "^4.1.3"
   },
   "engines": {
     "node": "~12.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22"
   }
 }
