--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@page-monitor/ui",
   "version": "0.0.0",
   "description": "the page-monitor ui",
   "author": "XinPing Wang <xinping.wang@hotmail.com>",
